day-18/exercises/aws-bootcamp/k8s/cilium/cnp-api-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: api-l7
  namespace: bootcamp-excess-media
spec:
  endpointSelector:
    matchLabels:
      app: bootcamp-api
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: bootcamp-excess-media
            app: bootcamp-frontend
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "/api/.*"
              - method: POST
                path: "/api/login"
              - method: GET
                path: "/healthz"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "/metrics"
